# qpxtool

./: Makefile  PATH.txt  README  config.h  meson.build  sonar-project.properties  status.html
built/debian_stretch/: libqpx-dev_0.7.2-4.1-ArtKarMOD_amd64.deb  libqpx0_0.7.2-4.1-ArtKarMOD_amd64.deb  pxfw_0.7.2-4.1-ArtKarMOD_amd64.deb  qpxtool_0.7.2-4.1-ArtKarMOD_amd64.deb
console/cdvdcontrol/: cdvdcontrol.cpp  meson.build
console/f1tattoo/: f1tattoo.cpp  meson.build
console/include/: child.h  dvd_udf.h  imgwriter.h  kbhit.h  meson.build  pxfw.h  qscand.h  reader.h  sectmap.h
console/pxfw/: meson.build  pxfw.cpp
console/qscan/: meson.build  qscan.cpp  version.h
console/qscand/: meson.build  qscand.cpp
console/readdvd/: deadreader.cpp  dvd_udf.cpp  meson.build  reader.cpp
debian/: changelog
debian/patches/: 07-fix-wr-mode-declarations.patch  ArtKarMOD  series
gui/: about.html  meson.build
gui/include/: device.h  mainwindow.h  meson.build  qpxsettings.h  version.h
gui/locale/: meson.build
gui/src/: device.cpp  mainwindow.cpp  qpxgraph.cpp
include/: about.hpp  abstractpreview.hpp  child.hpp  colorlabel.hpp  colors.hpp  common_functions.hpp  csstables.hpp  db_connection.hpp  db_report_selection.hpp  defs.hpp  device.hpp  devsettings.hpp  devsettings_widgets.hpp  dpi_metrics.hpp  dvd_udf.hpp  errc_detailed.hpp  graphtab.hpp  hostedit_dialog.hpp  image_label.hpp  images_list.hpp  imgwriter.hpp  kbhit.hpp  mainwidget.hpp  mainwindow.hpp  mcapwidget.hpp  meson.build  mwatcher.hpp  pioneer_spdctl.hpp  plextor_features.hpp  pref_colors.hpp  pref_common.hpp  pref_devices.hpp  pref_reports.hpp  preferences.hpp  printpreview.hpp  progresswidget.hpp  pxfw.hpp  qpx_mmc.hpp  qpx_mmc_defs.hpp  qpx_scan.hpp  (+36 more)
lib/include/: colors.h  common_functions.h  meson.build  pioneer_spdctl.h  plextor_features.h  qpx_mmc.h  qpx_mmc_defs.h  qpx_opcodes.h  qpx_scan.h  qpx_scan_plugin_api.h  qpx_transport.h  qpx_writer.h  threads.h  yamaha_features.h
lib/qpxpioneer/: meson.build
lib/qpxplextor/: meson.build
lib/qpxscan/: meson.build
lib/qpxtransport/: meson.build  qpx_mmc.cpp
lib/qpxyamaha/: meson.build  yamaha_features.cpp
man/: cdvdcontrol.1  f1tattoo.1  meson.build  pxfw.8  qpxtool.1  qscan.1  qscand.1  readdvd.1
patch/: modByArtKar.patch
plugins/: Makefile.plugin  meson.build
plugins/asus/: meson.build  qscan_cmd_asus.cpp  qscan_plugin_asus.cpp
plugins/benq/: meson.build  qscan_cmd_benq.cpp  qscan_plugin_benq.cpp
plugins/benq_dvdrom/: meson.build  qscan_cmd_benq_dvdrom.cpp  qscan_plugin_benq_dvdrom.cpp
plugins/generic/: meson.build  qscan_cmd_generic.cpp  qscan_plugin_generic.cpp
plugins/include/: meson.build  qscan_plugin_asus.h  qscan_plugin_benq.h  qscan_plugin_benq_dvdrom.h  qscan_plugin_generic.h  qscan_plugin_liteon.h  qscan_plugin_nec.h  qscan_plugin_pioneer.h  qscan_plugin_plextor.h  qscan_plugin_tsst.h
plugins/liteon/: meson.build  qscan_cmd.cpp  qscan_cmd_liteon.cpp  qscan_plugin.h  qscan_plugin_liteon.cpp
plugins/nec/: meson.build  qscan_cmd_nec.cpp  qscan_plugin_nec.cpp
plugins/pioneer/: meson.build  qscan_cmd.cpp  qscan_cmd_pioneer.cpp  qscan_plugin_pioneer.cpp
plugins/plextor/: meson.build  qscan_cmd.cpp  qscan_cmd_plextor.cpp  qscan_plugin_plextor.cpp
plugins/tsst/: meson.build  qscan_cmd_tsst.cpp  qscan_plugin_tsst.cpp
scripts/: sonarqube_report.sh
src/: cdvdcontrol.cpp  child.cpp  common_functions.cpp  deadreader.cpp  dvd_udf.cpp  f1tattoo.cpp  imgwriter.cpp  kbhit.cpp  meson.build  pioneer_spdctl.cpp  plextor_features.cpp  pxfw.cpp  qpx_mmc.cpp  qpx_mmc_css.cpp  qpx_scan.cpp  qpx_scan_algo.cpp  qpx_transport.cpp  qpx_writer.cpp  qscan.cpp  qscan_cmd_asus.cpp  qscan_cmd_benq.cpp  qscan_cmd_benq_dvdrom.cpp  qscan_cmd_generic.cpp  qscan_cmd_liteon.cpp  qscan_cmd_nec.cpp  qscan_cmd_pioneer.cpp  qscan_cmd_plextor.cpp  qscan_cmd_tsst.cpp  qscan_plugin_asus.cpp  qscan_plugin_benq.cpp  qscan_plugin_benq_dvdrom.cpp  qscan_plugin_generic.cpp  qscan_plugin_liteon.cpp  qscan_plugin_nec.cpp  qscan_plugin_pioneer.cpp  qscan_plugin_plextor.cpp  qscan_plugin_tsst.cpp  qscand.cpp  reader.cpp  reader_disc.cpp  (+4 more)
src/gui/: Makefile  NkHrug.json  PfdjUb.json  about.html  gui.pro  meson.build
src/gui/locale/: qpxtool_de_DE.ts  qpxtool_ru_RU.ts
src/gui/sql/: db_create.sql  db_drop.sql  db_media_types.sql
src/gui/src/: about.cpp  abstractpreview.cpp  colorlabel.cpp  db_connection.cpp  db_report_selection.cpp  device.cpp  devsettings.cpp  devsettings_widgets.cpp  errc_detailed.cpp  graphtab.cpp  hostedit_dialog.cpp  image_label.cpp  images_list.cpp  main.cpp  mainwidget.cpp  mainwindow.cpp  mcapwidget.cpp  mwatcher.cpp  pref_colors.cpp  pref_common.cpp  pref_devices.cpp  pref_reports.cpp  preferences.cpp  printpreview.cpp  progresswidget.cpp  qpxgraph.cpp  qpxiodevice.cpp  qpxsettings.cpp  resultsio.cpp  splitbutton.cpp  tab_devinfo.cpp  tab_errc.cpp  tab_fete.cpp  tab_jb.cpp  tab_mediainfo.cpp  tab_ta.cpp  tab_transfer.cpp  tattoowidget.cpp  testdialog.cpp  textslider.cpp
