project('qpxtool', 'cpp', version: '0.7.2', license: 'GPL')

console_inc = include_directories('console/include')
gui_inc = include_directories('gui/include')
lib_inc = include_directories('lib/include')
plugin_inc = include_directories('plugins/include')

subdir('console/include')
subdir('console/cdvdcontrol')
subdir('console/f1tattoo')
subdir('console/pxfw')
subdir('console/qscan')
subdir('console/qscand')
subdir('console/readdvd')
subdir('gui/src')
subdir('lib')
subdir('lib/qpxpioneer')
subdir('lib/qpxplextor')
subdir('lib/qpxscan')
subdir('lib/qpxtransport')
subdir('lib/qpxyamaha')
