project('qpxtool', 'cpp', version: '0.7.2', license: 'GPL')

console_inc = include_directories('console/include')
gui_inc = include_directories(['gui/include','gui'])
lib_inc = include_directories('lib/include')
plugin_inc = include_directories('plugins/include')

png_dep = dependency('libpng')
thread_dep = dependency('threads')



subdir('lib/qpxtransport')
subdir('lib/qpxpioneer')
subdir('lib/qpxplextor')
subdir('lib/qpxscan')
subdir('lib/qpxyamaha')
subdir('console/include')
subdir('console/cdvdcontrol')
subdir('console/f1tattoo')
subdir('console/pxfw')
subdir('console/qscan')
subdir('console/qscand')
subdir('console/readdvd')
subdir('gui')
subdir('gui/locale')
subdir('plugins')
subdir('plugins/asus')
subdir('plugins/benq')
subdir('plugins/benq_dvdrom')
subdir('plugins/generic')
subdir('plugins/liteon')
subdir('plugins/nec')
subdir('plugins/pioneer')
subdir('plugins/plextor')
subdir('plugins/tsst')

subdir('man')
subdir('gui/include')
subdir('lib/include')
subdir('plugins/include')
