qt4 = import('qt4')
qt4_dep = dependency('qt4', modules: ['Core', 'Gui', 'Network', 'Sql'])
qt4_moc_headers = ['include/about.h','include/abstractpreview.h',
                   'include/db_report_selection.h',
                   'include/device.h','include/devsettings.h',
                   'include/devsettings_widgets.h',
                   'include/errc_detailed.h','include/graphtab.h',
                   'include/hostedit_dialog.h','include/image_label.h',
                   'include/images_list.h','include/mainwidget.h',
                   'include/mainwindow.h','include/mcapwidget.h',
                   'include/mwatcher.h','include/pref_colors.h',
                   'include/pref_common.h','include/pref_devices.h',
                   'include/pref_reports.h','include/preferences.h',
                   'include/printpreview.h','include/progresswidget.h',
                   'include/qpxgraph.h','include/qpxiodevice.h',
                   'include/resultsio.h',
                   'include/splitbutton.h','include/tab_devinfo.h',
                   'include/tab_errc.h','include/tab_fete.h',
                   'include/tab_jb.h','include/tab_mediainfo.h',
                   'include/tab_ta.h','include/tab_transfer.h',
                   'include/tattoowidget.h','include/testdialog.h',
                   'include/textslider.h']
qt4_sources = ['src/colorlabel.cpp','src/db_connection.cpp','src/main.cpp','src/qpxsettings.cpp']
qt4_moc_sources = ['src/about.cpp','src/abstractpreview.cpp',
                   'src/db_report_selection.cpp','src/device.cpp',
                   'src/devsettings.cpp','src/devsettings_widgets.cpp',
                   'src/errc_detailed.cpp','src/graphtab.cpp',
                   'src/hostedit_dialog.cpp','src/image_label.cpp',
                   'src/images_list.cpp','src/mainwidget.cpp',
                   'src/mainwindow.cpp','src/mcapwidget.cpp',
                   'src/mwatcher.cpp','src/pref_colors.cpp',
                   'src/pref_common.cpp','src/pref_devices.cpp',
                   'src/pref_reports.cpp','src/preferences.cpp',
                   'src/printpreview.cpp','src/progresswidget.cpp',
                   'src/qpxgraph.cpp','src/qpxiodevice.cpp',
                   'src/resultsio.cpp',
                   'src/splitbutton.cpp','src/tab_devinfo.cpp',
                   'src/tab_errc.cpp','src/tab_fete.cpp',
                   'src/tab_jb.cpp','src/tab_mediainfo.cpp',
                   'src/tab_ta.cpp','src/tab_transfer.cpp',
                   'src/tattoowidget.cpp','src/testdialog.cpp',
                   'src/textslider.cpp']
qt4_qresources = ['images/media/cd.png','images/media/cd_r.png',
                  'images/media/cd_rw.png','images/media/dvd-rom.png',
                  'images/media/dvd-ram.png','images/media/dvd-r.png',
                  'images/media/dvd-r_dl.png','images/media/dvd-rw.png',
                  'images/media/dvd+r.png','images/media/dvd+r_dl.png',
                  'images/media/dvd+rw.png','images/media/hddvd-rom.png',
                  'images/media/hddvd-ram.png','images/media/hddvd-r.png',
                  'images/media/hddvd-rw.png','images/media/bd.png',
                  'images/q.png','images/x.png','images/ok.png',
                  'images/add.png','images/edit.png','images/edit-redo.png',
                  'images/edit-undo.png','images/edit-clear.png',
                  'images/logo.png','images/splash.png','images/info.png',
                  'images/pdf.png','images/html.png','images/document.png',
                  'images/save.png','images/directory.png',
                  'images/fileopen.png','images/printer.png',
                  'images/page-setup.png','images/zoom-in.png',
                  'images/zoom-out.png','images/zoom-orig.png',
                  'images/disc.png','images/device.png',
                  'images/cdwriter.png','images/colors.png',
                  'images/loej.png','images/lock.png',
                  'images/test_rt.png','images/test_wt.png',
                  'images/test_errc.png','images/test_jb.png',
                  'images/test_ft.png','images/test_ta.png',
                  'images/settings2.png','images/varirec.png',
                  'images/gigarec.png','images/password.png',
                  'images/sound.png','images/eraser.png',
                  'images/disc-eraser.png','images/tattoo.png',
                  'images/search.png','images/scan.png','images/stop.png',
                  'images/refresh.png','images/refresh-info.png',
                  'images/refresh-media.png','images/settings.png',
                  'images/exit.png','../COPYING','about.html']
moc_files = qt4.preprocess(moc_headers : qt4_moc_headers,
                           moc_sources : qt4_moc_sources,
                           include_directories : [gui_inc, lib_inc],
                           dependencies : qt4_dep)
qpxtool = executable('qpxtool',
           sources : [qt4_sources,moc_files,qt4_moc_sources], 
           include_directories: [gui_inc, lib_inc],
           link_with : [qpxtransport],
           dependencies : [qt4_dep,thread_dep])
