headers = ['about.hpp',
           'abstractpreview.hpp',
           'child.hpp',
           'colorlabel.hpp',
           'colors.hpp',
           'common_functions.hpp',
           'csstables.hpp',
           'db_connection.hpp',
           'db_report_selection.hpp',
           'defs.hpp',
           'device.hpp',
           'devsettings.hpp',
           'devsettings_widgets.hpp',
           'dpi_metrics.hpp',
           'dvd_udf.hpp',
           'errc_detailed.hpp',
           'graphtab.hpp',
           'hostedit_dialog.hpp',
           'image_label.hpp',
           'images_list.hpp',
           'imgwriter.hpp',
           'kbhit.hpp',
           'mainwidget.hpp',
           'mainwindow.hpp',
           'mcapwidget.hpp',
           'mwatcher.hpp',
           'pioneer_spdctl.hpp',
           'pref_colors.hpp',
           'pref_common.hpp',
           'pref_devices.hpp',
           'pref_reports.hpp',
           'preferences.hpp',
           'printpreview.hpp',
           'progresswidget.hpp',
           'pxfw.hpp',
           'qpxgraph.hpp',
           'qpxiodevice.hpp',
           'qpx_mmc.hpp',
           'qpx_mmc_defs.hpp',
           'qpx_opcodes.hpp',
           'qpx_scan.hpp',
           'qpx_scan_plugin_api.hpp',
           'qpxsettings.hpp',
           'qpx_transport.hpp',
           'qpx_writer.hpp',
           'qscand.hpp',
           'qscand_defs.hpp',
           'qscan_plugin_asus.hpp',
           'qscan_plugin_benq.hpp',
           'qscan_plugin_benq_dvdrom.hpp',
           'qscan_plugin_generic.hpp',
           'qscan_plugin_liteon.hpp',
           'qscan_plugin_nec.hpp',
           'qscan_plugin_pioneer.hpp',
           'qscan_plugin_plextor.hpp',
           'qscan_plugin_tsst.hpp',
           'reader.hpp',
           'reader_disc.hpp',
           'resultsio.hpp',
           'sectmap.hpp',
           'sense.hpp',
           'splitbutton.hpp',
           'tab_devinfo.hpp',
           'tab_errc.hpp',
           'tab_fete.hpp',
           'tab_jb.hpp',
           'tab_mediainfo.hpp',
           'tab_ta.hpp',
           'tab_transfer.hpp',
           'tattoowidget.hpp',
           'testdialog.hpp',
           'textslider.hpp',
           'threads.hpp',
           'version.hpp',
           'yamaha_features.hpp'
           ]
install_headers(headers)
