cdvdcontrol_linked_libraries = [qpxtransport,qpxplextor,
                                qpxyamaha,qpxpioneer]

cdvdcontrol = executable('cdvdcontrol', 'cdvdcontrol.cpp',
                         include_directories : [console_inc,lib_inc],
                         link_with : cdvdcontrol_linked_libraries)
