qt4_moc_inc = ['about.h','abstractpreview.h',
               'colorlabel.h','db_connection.h',
               'db_report_selection.h','defs.h',
               'device.h','devsettings.h',
               'devsettings_widgets.h','dpi_metrics.h',
               'errc_detailed.h','graphtab.h',
               'hostedit_dialog.h','image_label.h',
               'images_list.h','mainwidget.h',
               'mainwindow.h','mcapwidget.h',
               'mwatcher.h','pref_colors.h',
               'pref_common.h','pref_devices.h',
               'pref_reports.h','preferences.h',
               'printpreview.h','progresswidget.h',
               'qpxgraph.h','qpxiodevice.h',
               'qpxsettings.h','resultsio.h',
               'splitbutton.h','tab_devinfo.h',
               'tab_errc.h','tab_fete.h',
               'tab_jb.h','tab_mediainfo.h',
               'tab_ta.h','tab_transfer.h',
               'tattoowidget.h','testdialog.h',
               'textslider.h','version.h']

install_headers(qt4_moc_inc)
