lib_headers =['colors.h','common_functions.h','csstables.h',
              'pioneer_spdctl.h','plextor_features.h','qpx_mmc.h',
              'qpx_mmc_defs.h','qpx_opcodes.h','qpx_scan.h',
              'qpx_scan_plugin_api.h', 'qpx_transport.h', 'qpx_writer.h', 
              'sense.h', 'threads.h', 'yamaha_features.h']
install_headers(lib_headers)
