qpxpioneer_sources = ['pioneer_spdctl.cpp']
qpxpioneer = library('qpxpioneer',
                            qpxpioneer_sources,
                            link_with : qpxtransport,
                            version : '0.7.0',
                            include_directories : lib_inc,
                            install : true)
