qpxplextor_sources = ['plextor_features.cpp']
qpxplextor = library('qpxplextor',
                            qpxplextor_sources,
                            link_with : qpxtransport,
                            version : '0.7.0',
                            include_directories : lib_inc,
                            install : true)
