qpxyamaha_sources = ['yamaha_features.cpp']
qpxyamaha = library('qpxyamaha',
                            qpxyamaha_sources,
                            link_with : qpxtransport,
                            version : '0.7.0',
                            include_directories : lib_inc,
                            install : true)
