libqscan_asus_sources = ['qscan_cmd_asus.cpp','qscan_plugin_asus.cpp']
libqscan_asus = library('libqscan_asus',
                            libqscan_asus_sources,
                            link_with : plugin_linked_libraries,
                            include_directories : [lib_inc,plugin_inc],
                            install : true)
