libqscan_benq_dvdrom_sources = ['qscan_cmd_benq_dvdrom.cpp','qscan_plugin_benq_dvdrom.cpp']
libqscan_benq_dvdrom = library('libqscan_benq_dvdrom',
                            libqscan_benq_dvdrom_sources,
                            link_with : plugin_linked_libraries,
                            include_directories : [lib_inc,plugin_inc],
                            install : true)
