plugin_headers =['qscan_plugin_asus.h','qscan_plugin_benq.h',
                 'qscan_plugin_benq_dvdrom.h','qscan_plugin_generic.h',
                 'qscan_plugin_liteon.h','qscan_plugin_nec.h',
                 'qscan_plugin_pioneer.h','qscan_plugin_plextor.h',
                 'qscan_plugin_tsst.h']
install_headers(plugin_headers)
