libqscan_pioneer_sources = ['qscan_cmd_pioneer.cpp','qscan_plugin_pioneer.cpp']
libqscan_pioneer = library('libqscan_pioneer',
                            libqscan_pioneer_sources,
                            link_with : plugin_linked_libraries,
                            include_directories : [lib_inc,plugin_inc],
                            install : true)
