libqscan_plextor_sources = ['qscan_cmd_plextor.cpp','qscan_plugin_plextor.cpp']
libqscan_plextor = library('libqscan_plextor',
                            libqscan_plextor_sources,
                            link_with : plugin_linked_libraries,
                            include_directories : [lib_inc,plugin_inc],
                            install : true)
